--- a/package.json
+++ b/package.json
@@ -1,27 +1,35 @@
 {
-  "name": "openapi",
+  "name": "booksapi",
   "version": "0.1.0",
   "bin": {
-    "openapi": "bin/openapi.js"
+    "booksapi": "bin/booksapi.js"
   },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "deploy": "npm run build && npm run cdk deploy -- --require-approval never"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.76.0",
-    "@types/jest": "^26.0.10",
+    "@aws-cdk/aws-apigateway": "1.76.0",
+    "@aws-cdk/aws-lambda": "1.76.0",
+    "@aws-cdk/aws-iam": "1.76.0",
+    "@aws-cdk/aws-s3-assets": "1.76.0",
+    "@types/aws-serverless-express": "^3.3.3",
+    "@types/express": "^4.17.6",
     "@types/node": "10.17.27",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.2.0",
+    "@types/yamljs": "^0.2.31",
     "aws-cdk": "1.76.0",
+    "jest": "^26.4.2",
     "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
+    "typescript": "~3.9.7",
+    "yamljs": "^0.3.0"
   },
   "dependencies": {
     "@aws-cdk/core": "1.76.0",
+    "aws-lambda": "^1.0.6",
+    "aws-serverless-express": "^3.3.8",
+    "express": "^4.17.1",
     "source-map-support": "^0.5.16"
   }
 }
